[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acechange-agent-wallet"
version = "0.1.0"
description = "Non-custodial, policy-scoped crypto wallet for AI agents. Keys live with the bot; AceChange never custodies. Base + AceChange Agent API."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ai-agent", "wallet", "non-custodial", "base", "ethereum", "x402", "mcp", "self-custody"]
dependencies = [
  "cryptography>=42.0",
  "eth-account>=0.11",
  "web3>=6.15",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["acechange_agent_wallet"]
